--- a/templates/recipe/index.html.twig
+++ b/templates/recipe/index.html.twig
@@ -3,11 +3,16 @@
 {% block title %}Recipe{% endblock %}
 
 {% block body %}
-<section class="py-5 bg-light">
+<section class="py-5" style="background-color: #EBFFF0">
     <div class="container">
         <div class="d-flex justify-content-between align-items-center mb-4">
             <h2 class="mb-0">Recipes</h2>
-            <a href="{{ path('app_recipe_new') }}" class="btn custom-button">Create New</a>
+            {% if app.user %}
+                <a href="{{ path('app_recipe_new') }}" class="btn custom-button">Create New</a>
+            {% else %}
+                <a href="{{ path('app_login') }}" class="btn custom-button">Login to Create New</a>
+            {% endif %}
+
         </div>
         <!-- Recipe filter group -->
         <div class="mb-4 text-center">
