--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,7 +33,7 @@
                             <input type="password" id="password" name="_password" required class="form-control">
                         </div>
 
-                        <button type="submit" class="btn text-white w-100" style="background-color: #cc0000;">Login</button>
+                        <button type="submit" class="btn custom-button">Login</button>
                     </form>
 
                     <div class="text-center mt-4">
