--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,7 +1,7 @@
 body {
-    background-color: rgb(150, 64, 41);
+    background: linear-gradient(to right, #22859B, #80FF95);
 }
 
 .navbar-text-large .navbar-nav .nav-link {
-    font-size: 1.2rem; /* Beispiel: Erhöht die Schriftgröße auf 1.2rem */
+    font-size: 1.2rem; 
 }
