--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,19 +6,23 @@
   
   :root {
       --color-background: #96402A; 
-      --color-1: #073763;
-      --color-1-hover: #0b4e8c;
-      --color-2: #E6332A; 
-      --color-2-hover: #c02b23;
-      --color-3: #6D5B30; 
-
+      --color-1: #22859B;
+      --color-1-hover: #40A6BC
+      ;
+      --color-2: #80FF95; 
+      --color-2-hover: #5BBF6A;
     }
 
     .custom-button {
-        border-radius: 0.375rem;
-        color: white;
-        background-color: var(--color-1);
-        transition: all 0.3s ease-in-out;
+      border-radius: 0.375rem;
+      color: white;
+      background: linear-gradient(to bottom, #22859B, #80FF95); /* Gradient! */
+      border: none;
+      padding: 0.5rem 0.75rem;
+      font-weight: 500;
+      letter-spacing: 1px;
+      transition: all 0.3s ease-in-out;
+      cursor: pointer;
     }
     
     .custom-button:hover {
@@ -60,6 +64,34 @@
     
     .text-custom{
         color: var(--color-1);
+    }
+  
+    .nav-link-custom.active {
+      color: #22859B!important; /* Your custom "active" color */
+      font-weight: bold;
+    }
+
+     .navbar-nav .nav-link {
+        position: relative;
+        display: inline-block;
+        padding-bottom: 4px;
+        transition: all 0.3s ease;
+        color: #22859B; 
+    }
+
+    .navbar-nav .nav-link::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        height: 2px;
+        width: 0;
+        background-color: #22859B;
+        transition: width 0.3s ease;
+    }
+
+    .navbar-nav .nav-link:hover::after {
+        width: 100%;
     }
 
     
