--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,49 +4,20 @@
     <meta charset="UTF-8">
     <title>{% block title %}MealItUp{% endblock %}</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 128 128'><text y='1.2em' font-size='96'>:messer_gabel_teller:</text></svg>">
-    
-    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ asset('css/styles.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/wave.css') }}">
     <link rel="stylesheet" href="{{ asset('css/contact.css') }}">
 
-<style>
+    <style>
 
     
     body {
         padding-top: 100px;
     }
-
-
-    .navbar-nav .nav-link {
-        position: relative;
-        display: inline-block;
-        padding-bottom: 4px;
-        transition: all 0.3s ease;
-        color: #5a3e2b; /* dein Braunton */
-    }
-
-    .navbar-nav .nav-link::after {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        height: 2px;
-        width: 0;
-        background-color: #5a3e2b;
-        transition: width 0.3s ease;
-    }
-
-    .navbar-nav .nav-link:hover::after {
-        width: 100%;
-    }
-
-
-</style>
-
+    </style>
 
     {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
         {% block importmap %}{{ importmap('app') }}{% endblock %}
     {% endblock %}
 </head>
