--- a/templates/static/home.html.twig
+++ b/templates/static/home.html.twig
@@ -4,12 +4,7 @@
 
 {% block body %}
   <style>
-    /*---------------------------------------------------
-    LESS Elements 0.9
-  ---------------------------------------------------
-    A set of useful LESS mixins
-    More info at: http://lesselements.com
-  ---------------------------------------------------*/
+    
 @charset "UTF-8";
 html,
 body {
@@ -173,10 +168,12 @@ body {
 </head>
 <body>
   
+  <div class="pt-5">
+  
   <h1 class="m-5 p-5" style="color: white; letter-spacing: 2px;">Don't burn yourself while cooking, start now with MealitUp</h1>
   <p style="font-style: italic; color: #f8f5f5; text-align: center; letter-spacing: 6px; font-size: 20px">
     “MealitUp – Plan smart. Cook smart. Live smart.” </p>
-
+  </div>
   
   <div class="my-5 d-flex flex-wrap justify-content-center align-items-center gap-4">
 
@@ -216,26 +213,10 @@ body {
 
 </div>
 
-<p class="py-5 text-white text-center fst-italic fs-5" style="letter-spacing: 0.1em;">
+<p class="py-5 pb-5 text-white text-center fst-italic fs-5" style="letter-spacing: 0.1em;">
   “With MealitUp, healthy eating meets smart planning — discover, organize, and cook with confidence.”
 </p>
 
-<!-- Videos -->
-<div class="my-5 d-flex flex-wrap justify-content-center align-items-center gap-4">
-
-  <!-- Video 1 -->
-  <video class="rounded shadow" style="max-width: 100%; width: 300px;" controls 
-         poster="{{ asset('images/homepage/video_home_1.png') }}">
-    <source src="{{ asset('images/homepage/mealit.mp4') }}" type="video/mp4">  
-  </video>
-
-  <!-- Video 2 -->
-  <video class="rounded shadow" style="max-width: 100%; width: 300px;" controls 
-         poster="{{ asset('images/homepage/video_home_2.png') }}">
-    <source src="{{ asset('images/homepage/mockup.mp4') }}" type="video/mp4">
-  </video>
-
-</div>
 
 </body>
 
