--- a/templates/static/navbar.html.twig
+++ b/templates/static/navbar.html.twig
@@ -1,7 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
     <div class="container-fluid">
-        <img src="{{ asset('images/logo.png')}}" alt="MealitUP Logo" width="120" height="100" class="me-2 rounded">
-        <a class="navbar-brand fw-bold fs-4" href="#">MealitUP</a>
+        <img src="{{ asset('images/logo2.png')}}" alt="MealitUP Logo" width="120" height="100" class="me-2 rounded">
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
             <span class="navbar-toggler-icon"></span>
@@ -12,36 +11,29 @@
                 {% set currentRoute = app.request.attributes.get('_route') %}
 
                 <li class="nav-item">
-                
-
-                    <a class="nav-link {% if currentRoute == 'app_home' %}active fw-bold text-danger{% endif %}" href="{{ path('app_home') }}">Home</a>
+                    <a class="nav-link nav-link-custom {% if currentRoute == 'app_home' %}active{% endif %}" href="{{ path('app_home') }}">
+                    Home</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link {% if currentRoute == 'app_about' %}active fw-bold text-danger{% endif %}" href="{{ path('app_about') }}">How it works</a>
-                </li>
-               {% if app.user %}
-                 <li class="nav-item">
-                  <a class="nav-link {% if currentRoute == 'app_recipe_index' %}active fw-bold text-danger{% endif %}" href="{{ path('app_recipe_index') }}">Browse Recipe</a>
-                   </li>
-
-                 <li class="nav-item">
-                <a class="nav-link {% if currentRoute == 'app_meal_plan_index' %}active fw-bold text-danger{% endif %}" href="{{ path('app_meal_plan_index') }}">Meal Planner</a>
-                  </li>
-
-                  <li class="nav-item">
-                  <a class="nav-link {% if currentRoute == 'app_shopping_list_index' %}active fw-bold text-danger{% endif %}" href="{{ path('app_shopping_list_index') }}">Shopping List</a>
-                   </li>
-                {% endif %}
-
-                <li class="nav-item">
-                    <a class="nav-link {% if currentRoute == 'app_contact' %}active fw-bold text-danger{% endif %}" href="{{ path('app_contact') }}">Contact</a>
+                    <a class="nav-link nav-link-custom {% if currentRoute == 'app_about' %}active{% endif %}" href="{{ path('app_about') }}">How it works</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if currentRoute == 'app_team' %}active fw-bold text-danger{% endif %}" href="{{ path('app_team') }}">Team</a>
+                  <a class="nav-link nav-link-custom {% if currentRoute == 'app_recipe_index' %}active{% endif %}" href="{{ path('app_recipe_index') }}">Browse Recipe</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link nav-link-custom {% if currentRoute == 'app_meal_plan_index' %}active{% endif %}" href="{{ path('app_meal_plan_index') }}">Meal Planner</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link nav-link-custom {% if currentRoute == 'app_contact' %}active{% endif %}" href="{{ path('app_contact') }}">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if currentRoute == 'app_customers' %}active fw-bold text-danger{% endif %}" href="{{ path('app_customers') }}">Customers</a>
+                    <a class="nav-link nav-link-custom {% if currentRoute == 'app_team' %}active{% endif %}"  href="{{ path('app_team') }}">Team</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-custom {% if currentRoute == 'app_customers' %}active{% endif %}"  href="{{ path('app_customers') }}">Customers</a>
                 </li>
 
                 {% if app.user and is_granted('ROLE_ADMIN') %}
@@ -53,20 +45,20 @@
 
             <ul class="navbar-nav flex-column flex-lg-row align-items-start align-items-lg-center">
                 {% if app.user %}
-                    <li class="nav-item mb-2 mb-lg-0">
+                    <li class="nav-item mb-2 mx-2 mb-lg-0">
                         <span class="navbar-text">
                             👋 Welcome, <strong>{{ app.user.username }}</strong>
                         </span>
                     </li>
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a href="{{ path('app_logout') }}" class="btn btn-danger mx-3">Log out</a>
+                        <a href="{{ path('app_logout') }}" class="btn custom-button">Log out</a>
                     </li>
                 {% else %}
                     <li class="nav-item mb-2 mb-lg-0">
-                        <a href="{{ path('app_register') }}" class="btn btn-outline-secondary">Register</a>
+                        <a href="{{ path('app_register') }}" class="btn custom-button">Register</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="{{ path('app_login') }}" class="btn btn-outline-success mx-3">Log in</a>
+                    <li class="nav-item mx-2">
+                        <a href="{{ path('app_login') }}" class="btn custom-button">Log in</a>
                     </li>
                 {% endif %}
             </ul>
